trunk/Archive2/78/b7199733f9b1a6/output
main.cpp:53:32: error: implicit instantiation of undefined template 'Test<std::basic_string<char> &>'
    Test<decltype(name(line))> t;
                               ^
main.cpp:9:8: note: template is declared here
struct Test;
       ^
main.cpp:54:33: error: implicit instantiation of undefined template 'Test<std::basic_string<char> >'
    Test<decltype(name2(line))> t2;
                                ^
main.cpp:9:8: note: template is declared here
struct Test;
       ^
2 errors generated.
